2008-04-09  Albert Chu <chu11@llnl.gov>

	* configure.ac: Prepare for beta release.

	* Tagged Release-0_6_0_beta1.
	
2008-04-08  Albert Chu <chu11@llnl.gov>

	* doc/: More minor updates.

	* Various manpage cleanup and extra documentation.

	* ipmi-oem/: Change "cmd" to "command" everywhere.

	* libfreeipmi/, ipmidetect/, ipmimonitoring, ipmipower/,
	ipmiconsole/, ipmiping/, rmcpping/, doc/, configure.ac: Use
	.pre.in instead of just .in for manpages for consistency.

	* common/doc/manpage-common-reporting-bugs.man,
	common/doc/manpage-common-gpl-library-text.man,
	common/doc/manpage-common-gpl-program-text.man: New files.

	* Update manpages appropriately for report-bugs common manpage and
	gpl info.
	
	* Add copyrights to all manpages appropriately.

	* Remove "ORIGIN" and "AUTHORS" from most manpages.

	* common/doc/manpage-common-config-tool-general-use.man,
	common/doc/manpage-common-config-tool-options.man: New files.

	* bmc-config/, pef-config/, ipmi-sensors-config/: Use new common
	config-tool manpage text.

	* common/doc/manpage-common-known-issues-ping.man,
	common/doc/manpage-common-ping-options.man,
	common/doc/manpage-common-ping-origin.man: New files.

	* ipmiping/, rmcpping/: Use new common manpage text.
	
2008-04-07  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/: Support WATTS sensor unit type.

	* bmc-config/bmc-config.8.pre.in: Fix options in example.

	* bmc-config/bmc-config.conf.5.in: Anonymous -> NULL.

	* ipmimonitoring/: Support entity presence, management subsystem,
	battery, and fru state sensor interpretations.  General code
	cleanup.

	* ipmi-sensors/ipmi-sensors.8.pre.in: Add ipmimonitoring note.

	* ipmi-sel/ipmi-sel.8.pre.in: Add some text on SEL records.

	* README: Update as generic info, not just a GPL notice.

	* doc/freeipmi.7.in: New generic overview manpage.

	* libfreeipmi/libfreeipmi.3.in: New generic library overview
	manpage.

	* doc/Makefile.am, freeipmi.spec.in, configure.ac: Update for new
	manpages.
